; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_unpack-objects.c_unpack_one.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_unpack-objects.c_unpack_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@consumed_bytes = common dso_local global i32 0, align 4
@obj_list = common dso_local global %struct.TYPE_2__* null, align 8
@.str = private unnamed_addr constant [19 x i8] c"bad object type %d\00", align 1
@has_errors = common dso_local global i32 0, align 4
@recover = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @unpack_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unpack_one(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %8 = load i32, i32* @consumed_bytes, align 4
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @obj_list, align 8
  %10 = load i32, i32* %2, align 4
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i32 %8, i32* %13, align 4
  %14 = call i8* @fill(i32 1)
  store i8* %14, i8** %4, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = load i8, i8* %15, align 1
  %17 = zext i8 %16 to i64
  store i64 %17, i64* %6, align 8
  %18 = call i32 @use(i32 1)
  %19 = load i64, i64* %6, align 8
  %20 = lshr i64 %19, 4
  %21 = and i64 %20, 7
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %7, align 4
  %23 = load i64, i64* %6, align 8
  %24 = and i64 %23, 15
  store i64 %24, i64* %5, align 8
  store i32 4, i32* %3, align 4
  br label %25

25:                                               ; preds = %29, %1
  %26 = load i64, i64* %6, align 8
  %27 = and i64 %26, 128
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %44

29:                                               ; preds = %25
  %30 = call i8* @fill(i32 1)
  store i8* %30, i8** %4, align 8
  %31 = load i8*, i8** %4, align 8
  %32 = load i8, i8* %31, align 1
  %33 = zext i8 %32 to i64
  store i64 %33, i64* %6, align 8
  %34 = call i32 @use(i32 1)
  %35 = load i64, i64* %6, align 8
  %36 = and i64 %35, 127
  %37 = load i32, i32* %3, align 4
  %38 = zext i32 %37 to i64
  %39 = shl i64 %36, %38
  %40 = load i64, i64* %5, align 8
  %41 = add i64 %40, %39
  store i64 %41, i64* %5, align 8
  %42 = load i32, i32* %3, align 4
  %43 = add i32 %42, 7
  store i32 %43, i32* %3, align 4
  br label %25

44:                                               ; preds = %25
  %45 = load i32, i32* %7, align 4
  switch i32 %45, label %56 [
    i32 132, label %46
    i32 128, label %46
    i32 133, label %46
    i32 129, label %46
    i32 130, label %51
    i32 131, label %51
  ]

46:                                               ; preds = %44, %44, %44, %44
  %47 = load i32, i32* %7, align 4
  %48 = load i64, i64* %5, align 8
  %49 = load i32, i32* %2, align 4
  %50 = call i32 @unpack_non_delta_entry(i32 %47, i64 %48, i32 %49)
  br label %64

51:                                               ; preds = %44, %44
  %52 = load i32, i32* %7, align 4
  %53 = load i64, i64* %5, align 8
  %54 = load i32, i32* %2, align 4
  %55 = call i32 @unpack_delta_entry(i32 %52, i64 %53, i32 %54)
  br label %64

56:                                               ; preds = %44
  %57 = load i32, i32* %7, align 4
  %58 = call i32 @error(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %57)
  store i32 1, i32* @has_errors, align 4
  %59 = load i32, i32* @recover, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %62

61:                                               ; preds = %56
  br label %64

62:                                               ; preds = %56
  %63 = call i32 @exit(i32 1) #3
  unreachable

64:                                               ; preds = %61, %51, %46
  ret void
}

declare dso_local i8* @fill(i32) #1

declare dso_local i32 @use(i32) #1

declare dso_local i32 @unpack_non_delta_entry(i32, i64, i32) #1

declare dso_local i32 @unpack_delta_entry(i32, i64, i32) #1

declare dso_local i32 @error(i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
